--- a/assets/css/min-500px.scss
+++ b/assets/css/min-500px.scss
@@ -185,6 +185,8 @@ pre.highlight {
     white-space: pre;
 }
 .katex-display {
+    padding-top: 1px;
+    padding-bottom: 1px;
     font-size: 1.27em;
     color: #333;
     overflow-x: auto;
